Revert "make it better"
This reverts commit 66440a1b698af9f3e4fd718d4726bca83dd32134.

--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
         </form>
         
         {%if prediction %} 
-            <p class="text-center"> The image is a {{prediction}}</p>
+            <p class="text-center">Image is a {{prediction}}</p>
         {% endif %}
     </body>
 </html>
